add a related field

--- a/view/tracking_view.xml
+++ b/view/tracking_view.xml
@@ -31,9 +31,18 @@
                        <field name="sample_data3" />                      
                     </group>
                     <group string="Other Parameters">
-                       <field name="verification_interval" />
-                       <field name="name" />
-                       <field name="production_serial_number" />
+                        
+                            <field name="verification_interval"  />
+                       
+                            <field name="unit" />
+                        
+                            <field name="name" />
+                            <field name="production_serial_number" />
+                            <field name="location" />
+                            <field name="partner_id" />
+                            <field name="release_date" />
+                            <field name="user_id" />
+                        
                     </group>
                     <notebook colspan="4">
                       <page string="Sample Data">
@@ -47,25 +56,17 @@
                         </group>
                       </page>
                       <page string="Location">
-                        <group string="Check-in">
-                        <field name="check_in_ids" nolabel="1" colspan="4" mode="tree">
-                         <tree string="Checked-in">
-                          <field name="serial_number" />
-                          <field name="time_now" />
-                          <field name="create_uid" />
-                         </tree>
-                        </field>
-                      </group>
-                      <group string="Check-out">
-                        <field name="check_out_ids" nolabel="1" colspan="4" mode="tree">
-                        <tree string="Checked-out">
-                          <field name="serial_number" />
-                          <field name="time_now" />
-                          <field name="use" />
-                          <field name="who" />  
-                          <field name="create_uid" />
-                        </tree>
-                        </field>
+                        <group string="Checked In/Out">
+                           <field name="check_ids" nolabel="1" colspan="4" mode="tree">
+                             <tree string="Checked In/Out">
+                               <field name="name" />
+                               <field name="who" />
+                               <field name="location" />
+                               <field name="time_now" />
+                               <field name="state" />
+                               <field name="create_uid" />
+                             </tree>
+                           </field>
                         </group>
                       </page> 
                     </notebook>
@@ -111,7 +112,7 @@
             <field name="model">tracking.verification</field>
             <field name="arch" type="xml">
                 <form string="Verification History">
-                    <field name="partner_id"  colspan="4" />
+                    <field name="user_id"  colspan="4" />
                     <field name="date" />   
                     <field name="verification_ids"  />
                 </form>
@@ -123,108 +124,58 @@
             <field name="model">tracking.verification</field>
             <field name="arch" type="xml">
                 <tree string="Verification History">
-                    <field name="partner_id" />
+                    <field name="user_id" />
                     <field name="date" />
                     <field name="verification_ids"  />
                 </tree>
             </field>
         </record>
 
-        <record model="ir.actions.act_window" id="check_in_list_action">
-          <field name="name">Tracking</field>
-          <field name="res_model">tracking.check_in</field>
-          <field name="view_type">form</field>
-          <field name="view_mode">tree,form</field>
-          <field name="help" type="html">
-          </field>
-        </record>
-
-        <record model="ir.ui.view" id="check_in_form_view">
-             <field name="name">tracking.form</field>
-             <field name="model">tracking.check_in</field>
-             <field name="arch" type="xml" >
-                   <form string="Check In">
-                       <field name="serial_number" />
-                       <field name="time_now" />
-                       <field name="create_uid" />
-                   </form>
-            </field>
-        </record>
-
-        <record model="ir.ui.view" id="tracking_check_in_tree_view">
-            <field name="name">tracking.check_in.tree</field>
-            <field name="model">tracking.check_in</field>
-            <field name="arch" type="xml">
-            <tree string="Check In" editable="top">
-               <field name="serial_number" />
-               <field name="time_now" />
-               <field name="create_uid" />
-            </tree>
-            </field>
-        </record>
-
-        <record model="ir.actions.act_window" id="check_out_list_action">
-          <field name="name">Tracking</field>
-          <field name="res_model">tracking.check_out</field>
-          <field name="view_type">form</field>
-          <field name="view_mode">tree,form</field>
-          <field name="help" type="html">
-          </field>
-        </record>
-
-        <record model="ir.ui.view" id="tracking_check_out_tree_view">
-            <field name="name">tracking.check_out.tree</field>
-            <field name="model">tracking.check_out</field>
-            <field name="arch" type="xml">
-            <tree string="Check Out" editable="top">
-               <field name="serial_number" />
-               <field name="who" />
-               <field name="use" />
-               <field name="time_now" />
-            </tree>
-            </field>
-        </record>
-
-        <record model="ir.ui.view" id="check_out_form_view">
-             <field name="name">tracking.form</field>
-             <field name="model">tracking.check_out</field>
-             <field name="arch" type="xml" >
-                   <form string="Check Out">
-                       <field name="serial_number" />
-                       <field name="time_now" />
-                       <field name="use" />
-                       <field name="who" />  
-                       <field name="create_uid" />
-                   </form>
-            </field>
-        </record>
-
-     <!--   <record model="ir.actions.act_window" id="check_list_action">
+      <record model="ir.actions.act_window" id="check_list_action">
           <field name="name">Tracking</field>
           <field name="res_model">tracking.check</field>
           <field name="view_type">form</field>
           <field name="view_mode">tree,form</field>
           <field name="help" type="html">
           </field>
+      </record>
+
+      <record model="ir.ui.view" id="tracking_tree_view">
+            <field name="name">tracking.check.tree</field>
+            <field name="model">tracking.check</field>
+            <field name="arch" type="xml">
+            <tree string="Check In/Out" editable="top">
+               <field name="name" />
+               <field name="project_id" />
+               <field name="who" attrs="{'required':[('state','=','Checked-out')]}"/>
+               <field name="location" attrs="{'required':[('state','=','Checked-out')]}"/>
+               <field name="time_now" />
+               <field name="state" />
+               <field name="create_uid" />
+            </tree>
+            </field>
         </record>
 
         <record model="ir.ui.view" id="check_form_view">
              <field name="name">tracking.form</field>
              <field name="model">tracking.check</field>
              <field name="arch" type="xml" >
-                   <form string="Check">
-                       <field name="serial_number" />
+                   <form string="Check In/Out">
+                       <field name="name" />
+                       <field name="project_id" />
+                       <field name="who" attrs="{'required':[('state','=','Checked-out')]}"/>
+                       <field name="location" attrs="{'required':[('state','=','Checked-out')]}"/>
+                       <field name="time_now" />
                        <field name="state" />
+                       <field name="create_uid" />
                    </form>
             </field>
         </record>
-        -->
+
     <menuitem id="main_tracking_menu" name="Tracking" />
     <menuitem id="tracking_menu" name="Tracking" parent="main_tracking_menu" />
     <menuitem id="main_menu" name="Tracking Information" parent="tracking_menu" action="tracking_list_action" />
-    <menuitem id="check_in_menu" name="Check In" parent="tracking_menu" action="check_in_list_action" />
-    <menuitem id="check_out_menu" name="Check Out" parent="tracking_menu" action="check_out_list_action" />
-  <!--  <menuitem id="check_menu" name="Check" parent="tracking_menu" action="check_list_action" />
-   -->
+    <menuitem id="check_menu" name="Checked In/Out" parent="tracking_menu" action="check_list_action" />
+  
   </data>
 </openerp>
